--- a/scss/portfolio.css
+++ b/scss/portfolio.css
@@ -2,12 +2,22 @@
   #portfolio .getproject button {
     border: none;
     border-radius: 25px;
+    background: -webkit-gradient(linear, left top, right top, from(#1DA1A9), to(#10D2FD));
     background: linear-gradient(0.25turn, #1DA1A9, #10D2FD);
     color: white;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     margin: 0 auto;
     padding: 10px;
     width: 200px;
@@ -20,8 +30,8 @@
     margin-top: 100px;
   }
   #portfolio .next_and_back_slide_show button.left-arrow img {
-    width: 38px;
-    height: 38px;
+    width: 64px;
+    height: 64px;
   }
   #portfolio .next_and_back_slide_show button.right-arrow {
     border: none;
@@ -34,9 +44,15 @@
     height: 38px;
   }
   #portfolio .portfolio-item img {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     margin: 0 auto;
     width: 200px;
     height: 150px;
@@ -55,9 +71,15 @@
     -webkit-text-fill-color: transparent;
   }
   #portfolio .portfolio-text img {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     margin: 0 auto;
     width: 172px;
     height: auto;
@@ -69,12 +91,22 @@
   #portfolio .getproject button {
     border: none;
     border-radius: 25px;
+    background: -webkit-gradient(linear, left top, right top, from(#1DA1A9), to(#10D2FD));
     background: linear-gradient(0.25turn, #1DA1A9, #10D2FD);
     color: white;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     margin: 0 auto;
     padding: 10px;
     width: 200px;
@@ -103,9 +135,15 @@
     height: 44px;
   }
   #portfolio .portfolio-item img {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     margin: 0 auto;
     width: 300px;
     height: 210px;
@@ -124,9 +162,15 @@
     -webkit-text-fill-color: transparent;
   }
   #portfolio .portfolio-text img {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     margin: 0 auto;
     width: 172px;
     height: auto;
@@ -138,12 +182,22 @@
   #portfolio .getproject button {
     border: none;
     border-radius: 25px;
+    background: -webkit-gradient(linear, left top, right top, from(#1DA1A9), to(#10D2FD));
     background: linear-gradient(0.25turn, #1DA1A9, #10D2FD);
     color: white;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     margin: 0 auto;
     padding: 10px;
     width: 200px;
@@ -172,9 +226,15 @@
     height: 44px;
   }
   #portfolio .portfolio-item img {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     margin: 0 auto;
     width: 300px;
     height: 210px;
@@ -193,9 +253,15 @@
     -webkit-text-fill-color: transparent;
   }
   #portfolio .portfolio-text img {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     margin: 0 auto;
     width: 172px;
     height: auto;
@@ -207,12 +273,22 @@
   #portfolio .getproject button {
     border: none;
     border-radius: 25px;
+    background: -webkit-gradient(linear, left top, right top, from(#1DA1A9), to(#10D2FD));
     background: linear-gradient(0.25turn, #1DA1A9, #10D2FD);
     color: white;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     margin: 0 auto;
     padding: 10px;
     width: 200px;
@@ -241,9 +317,15 @@
     height: 44px;
   }
   #portfolio .portfolio-item img {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     margin: 0 auto;
     width: 350px;
     height: 240px;
@@ -262,9 +344,15 @@
     -webkit-text-fill-color: transparent;
   }
   #portfolio .portfolio-text img {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     margin: 0 auto;
     width: 172px;
     height: auto;
@@ -276,12 +364,22 @@
   #portfolio .getproject button {
     border: none;
     border-radius: 25px;
+    background: -webkit-gradient(linear, left top, right top, from(#1DA1A9), to(#10D2FD));
     background: linear-gradient(0.25turn, #1DA1A9, #10D2FD);
     color: white;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     margin: 0 auto;
     padding: 10px;
     width: 260px;
@@ -311,9 +409,15 @@
     height: 44px;
   }
   #portfolio .portfolio-item img {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     margin: 0 auto;
     width: 350px;
     height: 240px;
@@ -332,9 +436,15 @@
     -webkit-text-fill-color: transparent;
   }
   #portfolio .portfolio-text img {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     margin: 0 auto;
     width: 172px;
     height: auto;
@@ -346,12 +456,22 @@
   #portfolio .getproject button {
     border: none;
     border-radius: 25px;
+    background: -webkit-gradient(linear, left top, right top, from(#1DA1A9), to(#10D2FD));
     background: linear-gradient(0.25turn, #1DA1A9, #10D2FD);
     color: white;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     margin: 0 auto;
     padding: 10px;
     width: 260px;
@@ -380,9 +500,15 @@
     height: 44px;
   }
   #portfolio .portfolio-item img {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     margin: 0 auto;
     width: 350px;
     height: 240px;
@@ -401,12 +527,19 @@
     -webkit-text-fill-color: transparent;
   }
   #portfolio .portfolio-text img {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     margin: 0 auto;
     width: 172px;
     height: auto;
     margin-top: -10px;
   }
 }
+/*# sourceMappingURL=portfolio.css.map */
