--- a/scss/navMedia.css
+++ b/scss/navMedia.css
@@ -1,155 +1,133 @@
 @media only screen and (max-width: 479px) {
   header .logo img {
+    float: right;
     width: 135px;
     height: 30px;
-    margin-bottom: -36px;
-  }
-  header .hamburger {
-    -webkit-box-pack: right;
-        -ms-flex-pack: right;
-            justify-content: right;
-    float: right;
-    margin-top: 2px;
-  }
-  header .nav-links li {
-    opacity: 0;
-    margin-left: -50px;
-  }
-  header .nav-links li a {
-    font-size: 20px;
-    font-family: Arial, Helvetica, sans-serif;
+    margin-top: 20px;
+    margin-right: 10px;
   }
 }
 
 @media only screen and (min-width: 480px) and (max-width: 767px) {
   header .logo img {
+    float: right;
     width: 135px;
     height: 30px;
-    margin-bottom: -36px;
-  }
-  header .hamburger {
-    -webkit-box-pack: right;
-        -ms-flex-pack: right;
-            justify-content: right;
-    float: right;
-    margin-top: 3px;
-  }
-  header .nav-links li {
-    opacity: 0;
-    margin-left: -50px;
-  }
-  header .nav-links li a {
-    font-size: 20px;
-    font-family: Arial, Helvetica, sans-serif;
+    margin-top: 20px;
+    margin-right: 10px;
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1599px) {
   header .logo img {
+    float: right;
     width: 210px;
     height: 50px;
-    margin-bottom: -66px;
-  }
-  header .hamburger {
-    -webkit-box-pack: right;
-        -ms-flex-pack: right;
-            justify-content: right;
-    float: right;
-    margin-top: 22px;
-  }
-  header .nav-links li {
-    opacity: 0;
-    margin-left: -50px;
-  }
-  header .nav-links li a {
-    font-size: 23px;
-    font-family: Arial, Helvetica, sans-serif;
+    margin-top: 5px;
+    margin-right: 30px;
   }
 }
 
-header {
-  position: relative;
-}
-
-.nav-links {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  list-style: none;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.nav-links li {
-  margin-top: 60px;
-}
-
-.nav-links li a {
-  color: white;
-  text-decoration: none;
-  font-size: 19px;
+*, *::before, *::after {
+  box-sizing: inherit;
 }
 
 .hamburger {
-  position: absolute;
+  padding: 10px;
+  display: inline-block;
   cursor: pointer;
-  right: 5%;
-  z-index: 2;
+  background-color: transparent;
+  border: 0;
+  margin: 0;
+  margin-top: 10px;
+  margin-left: 20px;
 }
 
-.hamburger .line {
-  width: 30px;
-  height: 3px;
-  background: black;
-  margin: 5px;
+.hamburger, .navigation {
+  transition: transform .3s .1s ease-in-out;
 }
 
-.nav-links {
-  position: fixed;
-  margin-top: -50px;
-  margin-left: -10px;
+.hamburger--active {
+  transform: translatex(250px);
+}
+
+.hamburger__box {
+  width: 35px;
+  height: 24px;
+  display: inline-block;
+  position: relative;
+}
+
+.hamburger__inner {
   width: 100%;
+  height: 3px;
+  background-color: #171717;
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: background-color .1s .2s ease-in-out;
+}
+
+.hamburger__inner::before,
+.hamburger__inner::after {
+  width: 100%;
+  height: 3px;
+  background-color: #171717;
+  position: absolute;
+  content: '';
+  left: 0;
+  transition: transform .2s .2s ease-in-out;
+}
+
+.hamburger__inner::before {
+  top: -10px;
+}
+
+.hamburger__inner::after {
+  top: 10px;
+}
+
+.hamburger--active .hamburger__inner {
+  background-color: transparent;
+}
+
+.hamburger--active .hamburger__inner:before {
+  transform: translateY(10px) rotate(45deg);
+}
+
+.hamburger--active .hamburger__inner:after {
+  transform: translateY(-10px) rotate(-45deg);
+}
+
+.navigation {
   height: 100vh;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  clip-path: circle(100px at 90% -10%);
-  -webkit-clip-path: circle(100px at 90% -10%);
-  -webkit-transition: all 1s ease-out;
-  transition: all 1s ease-out;
-  pointer-events: none;
+  width: 250px;
+  background-color: #171717;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: translateX(-250px);
+  z-index: 999;
 }
 
-.nav-links.open {
-  z-index: 1;
-  height: 100vh;
-  clip-path: circle(1000px at 80%);
-  -webkit-clip-path: circle(1000px at 80%);
-  pointer-events: all;
-  background-color: #309ec0;
+.navigation--active {
+  transform: translateX(0px);
 }
 
-.nav-links li:nth-child(1) {
-  -webkit-transition: all 0.6s ease 0.2s;
-  transition: all 0.6s ease 0.2s;
+.navigation__list {
+  margin-top: 50px;
+  list-style: none;
 }
 
-.nav-links li:nth-child(2) {
-  -webkit-transition: all 0.6s ease 0.4s;
-  transition: all 0.6s ease 0.4s;
+.navigation__item {
+  margin-bottom: 20px;
+  margin-top: 70px;
 }
 
-.nav-links li:nth-child(3) {
-  -webkit-transition: all 0.6s ease 0.6s;
-  transition: all 0.6s ease 0.6s;
+.navigation__item a {
+  text-decoration: none;
+  color: #fff;
+  font-family: 'Rokkitt', serif;
+  font-size: 24px;
 }
-
-.nav-links li.fade {
-  opacity: 1;
-}
-/*# sourceMappingURL=navMedia.css.map */
