--- a/scss/navMedia.scss
+++ b/scss/navMedia.scss
@@ -3,25 +3,12 @@
     header{
         .logo{
             img{
+                float: right;
                 width: 135px;
                 height: 30px;
-                margin-bottom: -36px;
+                margin-top: 20px;
+                margin-right: 10px;
             }
-        }
-        .hamburger{
-            justify-content: right;
-            float: right;
-            margin-top: 2px;   
-         }
-         .nav-links {
-          li {
-            opacity: 0;
-            margin-left: -50px;
-            a {
-              font-size: 20px;
-              font-family: Arial, Helvetica, sans-serif;
-            }    
-          }
         }
     }
  }
@@ -30,25 +17,12 @@
     header{
         .logo{
             img{
-                width: 135px;
-                height: 30px;
-                margin-bottom: -36px;
+              float: right;
+              width: 135px;
+              height: 30px;
+              margin-top: 20px;
+              margin-right: 10px;
             }
-        }
-        .hamburger{
-          justify-content: right;
-          float: right;
-          margin-top: 3px;
-        }
-        .nav-links {
-          li {
-            opacity: 0;
-            margin-left: -50px;
-            a {
-              font-size: 20px;
-              font-family: Arial, Helvetica, sans-serif;
-            }    
-          }
         }
     }
 }
@@ -57,97 +31,122 @@
     header{
         .logo{
             img{
+                float: right;
                 width: 210px;
                 height: 50px;
-                margin-bottom: -66px;
+                margin-top: 5px;
+                margin-right: 30px;
             }
-        }
-        .hamburger{
-            justify-content: right;
-            float: right;
-            margin-top: 22px;
-        }
-        .nav-links {
-          li {
-            opacity: 0;
-            margin-left: -50px;
-            a {
-              font-size: 23px;
-              font-family: Arial, Helvetica, sans-serif;
-            }    
-          }
         }
     }
 }
 
 
-header {
+*, *::before, *::after {
+  box-sizing: inherit;
+}
+
+$dark: #171717;
+$light: #FFFFFF;
+
+.hamburger {
+  padding: 10px;
+  display: inline-block;
+  cursor: pointer;
+  background-color: transparent;
+  border: 0;
+  margin: 0;
+  margin-top: 10px;
+  margin-left: 20px;
+}
+
+.hamburger, .navigation {
+  transition: transform .3s .1s ease-in-out;
+}
+
+.hamburger--active {
+  transform: translatex(250px);
+}
+
+.hamburger__box {
+  width: 35px;
+  height: 24px;
+  display: inline-block;
   position: relative;
 }
 
-.nav-links {
-    display: flex;
-    list-style: none;
-    justify-content: center;
-    align-items: center;
-    
-      li{
-        margin-top: 60px;
-        a {
-          color: white;
-          text-decoration: none;
-          font-size: 19px;
-        }
-      }
-  }
+@mixin hamburger-line {
+  width: 100%;
+  height: 3px;
+  background-color: #171717;
+  position: absolute;
+}
 
-  .hamburger{
-      position: absolute;
-      cursor: pointer;
-      right: 5%;
-      z-index: 2;
-        
-      .line {
-        width: 30px;
-        height: 3px;
-        background: black;
-        margin: 5px;
-        
-      }
+.hamburger__inner {
+  @include hamburger-line;
+  
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: background-color .1s .2s ease-in-out;
+}
+
+.hamburger__inner::before,
+.hamburger__inner::after {
+  @include hamburger-line;
+  
+  content: '';
+  left: 0;
+  transition: transform .2s .2s ease-in-out;
+} 
+
+.hamburger__inner::before {
+  top: -10px;
+}
+
+.hamburger__inner::after {
+  top: 10px;
+}
+
+.hamburger--active .hamburger__inner {
+  background-color: transparent;
+}
+
+.hamburger--active .hamburger__inner:before {
+  transform: translateY(10px) rotate(45deg);
+}
+
+.hamburger--active .hamburger__inner:after {
+  transform: translateY(-10px) rotate(-45deg);
+}
+
+.navigation {
+  height: 100vh;
+  width: 250px;
+  background-color: #171717;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: translateX(-250px);
+  z-index: 999;
+}
+
+.navigation--active {
+  transform: translateX(0px);
+}
+
+.navigation__list {
+  margin-top: 50px;
+  list-style: none;
+}
+
+.navigation__item {
+  margin-bottom: 20px;
+  margin-top: 70px;
+  a {
+    text-decoration: none;
+    color: #fff;
+    font-family: 'Rokkitt', serif;
+    font-size: 24px;
   }
-    
-    .nav-links {
-      position: fixed;
-      margin-top: -50px;
-      margin-left: -10px;
-      width: 100%;
-      height: 100vh;
-      flex-direction: column;
-      clip-path: circle(100px at 90% -10%);
-      -webkit-clip-path: circle(100px at 90% -10%);
-      transition: all 1s ease-out;
-      pointer-events: none;
-      
-       &.open {
-         z-index: 1;
-        height: 100vh;
-        clip-path: circle(1000px at 90% - 10%);
-        -webkit-clip-path: circle(1000px at 90% - 10%);
-        pointer-events: all;
-        background-color: rgb(48, 158, 192);
-      }
-      li {
-        &:nth-child(1) {
-          transition: all 0.6s ease 0.2s;
-        }
-        &:nth-child(2) {
-          transition: all 0.6s ease 0.4s;
-        }
-        &:nth-child(3) {
-          transition: all 0.6s ease 0.6s;
-        }
-        &.fade {
-          opacity: 1;
-        }     
-      }
-   }
+}
